--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-ui",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "react-calendar": "^4.8.0",
     "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
